--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "A high-impact, fully JSON-driven Next.js template for documentation and marketing sites.",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/detect-hardcoded-urls.js && next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest run",
