--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
     "build": "node scripts/detect-hardcoded-urls.js && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:images": "vitest run tests/lib/images.test.ts tests/lib/content.test.ts tests/integration/image-display.test.ts tests/integration/image-quality.test.ts tests/integration/build-validation.test.ts",
-    "test:all": "npm run test && npm run test:images",
-    "prebuild": "node -e \"if (process.env.SKIP_CHECK !== 'true') { require('child_process').execSync('npm run test:images', {stdio: 'inherit'}); }\"",
     "check": "npm run check:images && npm run check:links",
     "check:images": "node scripts/check-images.js",
     "check:links": "node scripts/check-links.js",
-    "fetch-images": "node scripts/fetch-wikimedia-images.js"
+    "fetch-images": "node scripts/fetch-wikimedia-images.js",
+    "lint:hardcode": "node scripts/detect-hardcoded-urls.js",
+    "verify:assets-policy": "node scripts/verify-assets-policy.js",
+    "verify:assets-exist": "node scripts/verify-assets-exist.js"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -31,28 +29,21 @@
     "@eslint/eslintrc": "^3.3.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-slot": "^1.2.4",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.1",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
     "@typescript-eslint/parser": "^8.51.0",
-    "@vitejs/plugin-react": "^5.1.2",
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^9.1.7",
-    "jsdom": "^27.4.0",
-    "lint-staged": "^16.2.7",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.51.0",
-    "vitest": "^4.0.16"
+    "typescript-eslint": "^8.51.0"
   }
 }
