--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "fetch-images": "node scripts/fetch-wikimedia-images.js",
     "lint:hardcode": "node scripts/detect-hardcoded-urls.js",
     "verify:assets-exist": "node scripts/verify-assets-exist.js",
-    "verify:assets-policy": "node scripts/detect-hardcoded-urls.js && node scripts/verify-assets-policy.js",
+    "verify:assets-policy": "node scripts/detect-hardcoded-urls.js && node scripts/verify-assets-policy.mjs",
     "fetch:images:mvp:dry": "node scripts/fetch-images-mvp.js --dry-run",
     "fetch:images:mvp": "node scripts/fetch-images-mvp.js --max-total 8",
-    "prebuild": "node scripts/detect-hardcoded-urls.js"
+    "prebuild": "node scripts/detect-hardcoded-urls.js && node scripts/verify-assets-policy.mjs"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
@@ -26,7 +26,8 @@
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
