fix: dev/build復旧とハイドレーションミスマッチ修正
- data/onsen-catalog.json: manza/shimaの必須フィールド(region, onsen, access, accommodation, content)を追加
- next.config.mjs: basePathのフォールバック追加（GITHUB_REPOSITORYから自動推定）
- .env.production: NEXT_PUBLIC_BASE_PATH=/website_v2を設定
- SearchBox/AreaFilter: Server Componentからevent handlerを削除し、URLパラメータを直接操作するように変更
- app/layout.tsx: suppressHydrationWarningを追加（ブラウザ拡張機能による属性追加に対応）

これにより以下が復旧:
- npm run devでトップ/一覧/詳細が表示される
- npm run buildがCatalog validationで落ちない
- Pages向けbasePathが/website_v2に必ず一致する

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A high-impact, fully JSON-driven Next.js template for documentation and marketing sites.",
   "scripts": {
     "dev": "next dev",
-    "build": "node scripts/detect-hardcoded-urls.js && next build",
+    "build": "cross-env NODE_OPTIONS=\"--max-old-space-size=16384 --max-semi-space-size=128\" next build",
+    "build:full": "node scripts/detect-hardcoded-urls.js && node scripts/verify-assets-policy.mjs && cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
     "start": "next start",
     "lint": "next lint",
     "check": "npm run check:images && npm run check:links",
@@ -40,6 +41,7 @@
     "@typescript-eslint/parser": "^8.51.0",
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
+    "cross-env": "^10.1.0",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
